@startuml

title __IQP.APP's Class Diagram__\n

  namespace com.example.iqp {
    class com.example.iqp.BuildConfig {
    }
  }
  

  namespace com.example.iqp {
    class com.example.iqp.DataBaseHandler {
    }
  }
  

  namespace com.example.iqp {
    class com.example.iqp.MainActivity {
    }
  }
  

  namespace com.example.iqp {
    class com.example.iqp.Prediction {
    }
  }
  

  namespace com.example.iqp {
    class com.example.iqp.Users {
    }
  }
  

  namespace com.example.iqp {
    class com.example.iqp.graphDisplay {
    }
  }
  

  namespace com.example.iqp {
    class com.example.iqp.loginActivity {
    }
  }
  

  namespace com.example.iqp {
    class com.example.iqp.signUp {
    }
  }
  

  com.example.iqp.DataBaseHandler -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.iqp.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.iqp.Prediction -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.iqp.graphDisplay -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.iqp.loginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.iqp.loginActivity o-- com.example.iqp.DataBaseHandler : dataBaseHandler
  com.example.iqp.loginActivity o-- com.example.iqp.Users : users
  com.example.iqp.signUp -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.iqp.signUp o-- com.example.iqp.Users : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
